WIP: add Journal operation
