# src/main/resources/apidocs/openapi.yaml
@@ -63,6 +63,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Operation'
+  /journal:
+    post:
+      tags:
+      - journal-controller
+      operationId: createJournalEntry
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateJournalEntry'
+        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/JournalEntry'
   /users/me:
     get:
       tags:
@@ -85,8 +103,8 @@ paths:
         in: path
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
       responses:
         "200":
           description: OK
@@ -108,6 +126,20 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/OperationName'
+  /journal/types:
+    get:
+      tags:
+      - journal-controller
+      operationId: getJournalTypes
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
   /actuator:
     get:
       tags:
@@ -207,9 +239,26 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         name:
+          type: string
+    CreateJournalEntry:
+      type: object
+      properties:
+        operationId:
+          type: string
+          format: uuid
+        type:
+          type: string
+        event:
+          type: string
+    JournalEntry:
+      type: object
+      properties:
+        type:
+          type: string
+        event:
           type: string
     OperationName:
       required:
@@ -218,8 +267,8 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         name:
           type: string
     Link:
